--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
-    image: postgres:15-alpine
+    image: postgres:15
     container_name: docflow_postgres
     environment:
       POSTGRES_DB: docflow
@@ -68,7 +66,7 @@ services:
 
   # Redis (optional for session storage)
   redis:
-    image: redis:7-alpine
+    image: redis:7
     container_name: docflow_redis
     ports:
       - "6379:6379"
