--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ httpx>=0.24.0
 pytest-mock>=3.10.0
 # Authentication dependencies
 python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
+passlib>=1.7.4
+bcrypt>=4.0.1
 python-multipart>=0.0.6
 email-validator>=2.0.0
