--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -11,10 +9,16 @@ services:
       POSTGRES_PASSWORD: docflow_password
     volumes:
       - postgres_dev_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     networks:
       - docflow_dev_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U docflow_user -d docflow"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # FastAPI Backend (Development)
   backend:
@@ -34,8 +38,32 @@ services:
     networks:
       - docflow_dev_network
     depends_on:
-      - postgres
-    command: ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+      postgres:
+        condition: service_healthy
+    command: ["python", "start_dev.py"]
+
+  # React Frontend (Development)
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    container_name: docflow_frontend_dev
+    environment:
+      - VITE_API_URL=http://localhost:8000
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "3000:5173"
+    networks:
+      - docflow_dev_network
+    depends_on:
+      - backend
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5173/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # Redis (Development)
   redis:
